tests/ui/frontmatter/unclosed-2.stderr
error: unclosed frontmatter
  --> $DIR/unclosed-2.rs:1:1
   |
LL | / ----cargo
...  |
LL | |     "----"
LL | | }
   | |__^
   |
note: frontmatter opening here was not closed
  --> $DIR/unclosed-2.rs:1:1
   |
LL | ----cargo
   | ^^^^

error[E0658]: frontmatters are experimental
  --> $DIR/unclosed-2.rs:1:1
   |
LL | / ----cargo
...  |
LL | |     "----"
LL | | }
   | |__^
   |
   = note: see issue #136889 <https://github.com/rust-lang/rust/issues/136889> for more information
   = help: add `#![feature(frontmatter)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
